--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,67 @@
+accelerate==1.6.0
+aenum==3.1.15
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
+av==14.3.0
+brotli==1.1.0
+build==1.2.2.post1
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+click-option-group==0.5.7
+cloudpickle==3.1.1
 cohere==5.14.2
+colored==2.3.0
 coloredlogs==15.0.1
 cuda-bindings==12.8.0
 cuda-python==12.8.0
 datasets==3.5.0
+decord==0.6.0
+diffusers==0.33.1
 dill==0.3.8
+distro==1.9.0
 dnspython==2.7.0
+einops==0.8.1
+evaluate==0.4.3
 faiss-cpu==1.10.0
-fastapi==0.115.12
+fastapi==0.115.4
 fastavro==1.10.0
 filelock==3.18.0
+flashinfer-python==0.2.5
 flatbuffers==25.2.10
 frozenlist==1.5.0
 fsspec==2024.12.0
+gevent==25.4.1
+geventhttpclient==2.3.3
+greenlet==3.2.0
 h11==0.14.0
+h5py==3.12.1
 httpcore==1.0.7
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.30.2
 humanfriendly==10.0
 idna==3.10
+importlib-metadata==8.6.1
 jinja2==3.1.6
+jiter==0.9.0
 joblib==1.4.2
+lark==1.2.2
 mako==1.3.10
+markdown-it-py==3.0.0
 markupsafe==3.0.2
+mdurl==0.1.2
+mpi4py==4.0.3
 mpmath==1.3.0
 multidict==6.4.2
 multiprocess==0.70.16
 networkx==3.4.2
-numpy==2.2.4
+ninja==1.11.1.4
+numpy==1.26.4
 nvidia-cublas-cu12==12.4.5.8
 nvidia-cuda-cupti-cu12==12.4.127
 nvidia-cuda-nvrtc-cu12==12.4.127
@@ -47,56 +72,85 @@ nvidia-curand-cu12==10.3.5.147
 nvidia-cusolver-cu12==11.6.1.9
 nvidia-cusparse-cu12==12.3.1.170
 nvidia-cusparselt-cu12==0.6.2
+nvidia-ml-py==12.570.86
+nvidia-modelopt==0.25.0
+nvidia-modelopt-core==0.25.0
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
 onnx==1.17.0
+onnx-graphsurgeon==0.5.8
 onnxruntime-gpu==1.21.0
+openai==1.75.0
+optimum==1.24.0
+ordered-set==4.1.0
 packaging==24.2
 pandas==2.2.3
-pillow==11.1.0
+pillow==10.3.0
+pip==25.0.1
 platformdirs==4.3.7
+polygraphy==0.49.20
 propcache==0.3.1
 protobuf==6.30.2
+psutil==7.0.0
+pulp==3.1.1
 pyarrow==19.0.1
 pycuda==2025.1
 pydantic==2.11.3
 pydantic-core==2.33.1
+pygments==2.19.1
 pymongo==4.12.0
+pynvml==12.0.0
+pyproject-hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 python-multipart==0.0.20
+python-rapidjson==1.20
 pytools==2025.1.2
 pytz==2025.2
 pyyaml==6.0.2
+pyzmq==26.4.0
+qwen-vl-utils==0.0.8
 regex==2024.11.6
 requests==2.32.3
+rich==14.0.0
 safetensors==0.5.3
 scikit-learn==1.6.1
 scipy==1.15.2
 sentence-transformers==4.0.2
-setuptools==78.1.0
+sentencepiece==0.2.0
+setuptools==79.0.0
 six==1.17.0
 sniffio==1.3.1
-starlette==0.46.1
+starlette==0.41.3
+strenum==0.4.15
 sympy==1.13.1
 tensorrt==10.9.0.34
 tensorrt-cu12==10.9.0.34
 tensorrt-cu12-bindings==10.9.0.34
 tensorrt-cu12-libs==10.9.0.34
+tensorrt-llm==0.18.2
 threadpoolctl==3.6.0
+timm==1.0.15
 tokenizers==0.21.1
 torch==2.6.0
 torchaudio==2.6.0
+torchprofile==0.0.4
 torchvision==0.21.0
 tqdm==4.67.1
-transformers==4.51.1
+transformers==4.48.3
+transformers-stream-generator==0.0.5
 triton==3.2.0
+tritonclient==2.56.0
 types-requests==2.32.0.20250328
 typing-extensions==4.13.1
 typing-inspection==0.4.0
 tzdata==2025.2
 urllib3==2.3.0
 uvicorn==0.34.0
+wheel==0.45.1
 xxhash==3.5.0
 yarl==1.19.0
+zipp==3.21.0
+zope-event==5.0
+zope-interface==7.2
