fix: update .gitignore to include additional file types and directories

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,10 @@ models/*
 !data/faiss_index.bin
 !data/id_mapping.pkl
 *.zip
+*.engine
+*.plan
+*.onnx
+*.onnxruntime
+*.cache
 uploads/*
+frontend/
