--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ fsspec==2024.12.0
 gevent==25.4.1
 geventhttpclient==2.3.3
 greenlet==3.2.0
+grpcio==1.67.1
 h11==0.14.0
 h5py==3.12.1
 httpcore==1.0.7
@@ -91,7 +92,7 @@ pip==25.0.1
 platformdirs==4.3.7
 polygraphy==0.49.20
 propcache==0.3.1
-protobuf==6.30.2
+protobuf==5.29.4
 psutil==7.0.0
 pulp==3.1.1
 pyarrow==19.0.1
